# sdl2fireworks

./: CHANGELOG.txt  CMakeLists.txt  README.txt  sdl2fireworkswriteup.odt
.kdev4/: sdl2fireworks.kdev4
include/: camera.h  commonheader.h  sdl2fireworks.h  shader.h
src/: CMakeLists.txt  sdl2fireworks.cpp
